--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="reviews">Reviews</string>
     <string name="autor_name">Autor Name</string>
     <string name="review_text">Review</string>
+    <string name="favorite_movies">Favoritos</string>
 </resources>
